- Fixed bug #24883 (variables_order and gpc_order being ignored). (Ilia)
- Fixed bug #24871 (methods misidentified as constructors). (Ilia)
- Fixed bug #23509 (exit code lost when exit() called from 
  register_shutdown_function()). (Ilia)
- Fixed bug #22154 (Possible crash when memory_limit is reached and
  output buffering in addition to session.use_trans_sid is used). (Ilia)

30 Jul 2003, Version 4.3.3RC2
- Improved the NSAPI SAPI module (Uwe Schindler)
  . Added possibility to use PHP to generate HTTP error pages (404 Not Found..)
  . Added possibility to use PHP to generate directory listings for directories
    without index.html
- Upgraded the bundled Expat library to version 1.95.6. (Jani)
- Upgraded the bundled PCRE library to version 4.3. (Andrei)
- Added a new parameter to preg_match*() that can be used to specify 
  the starting offset in the subject string to match from. (Andrei)
- Fixed FastCGI IIS document root problem. (Shane)
- Fixed corruption of multibyte character including 0x5c as second
  byte in multipart/form-data. (Rui)
- Fixed possible crash in imagerotate() when an invalid color index
  is used for background color. (Pierre-Alain Joye)
- Fixed a bug that under certain circumstances could invalidate safe_mode.
  (Ilia)
- Fixed certificate version and allowed setting of the serial number in
  openssl_csr_sign(). (Stefan Roehrich)
- Fixed each() to be binary safe for keys. (Zeev)
- Fixed bug #24873 (incorrect handling of / inside open_basedir). (Ilia)
- Fixed bug #24827 (ob_gzhandler overrides Vary header). (Ilia)
- Fixed bug #24783 (foreach($ar as $key => $val), $key not binary safe). (Zeev)
- Fixed bug #24760 (non-default SNMP port number not working). (Jani)
- Fixed bug #24752 (Unhandled "uniqueidentifier" field type). 
  (Ilia, s.sonnenberg[at]coolspot.de)
- Fixed bug #24710 (Crash when $obj->{0} is used). (Zeev)
- Fixed bug #24663 (\n. sequences were not being escaped). (Ilia)